Fixed layout issue on mobile

--- a/component/src/main/resources/web/app/app.css
+++ b/component/src/main/resources/web/app/app.css
@@ -137,7 +137,7 @@
 }
 
 .text-neon, .thumbs-up-success {
-    color: var(--bs-color-neon);
+    color: var(--bs-color-neon) !important;
 }
 
 .text-string {
